tests/snapshots/examples_fixtures/type_system__failing__151_array_literal_concrete_conflict_prefers_e300.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/151_array_literal_concrete_conflict_prefers_e300.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Type Mismatch

I found a type mismatch.

  examples/type_system/failing/151_array_literal_concrete_conflict_prefers_e300.flx:2:31
  |
2 |     let xs: Array<Int> = [|1, "two"|]
  |                               ^^^^^
  |                               ----- this expression has type `String`

  |                               ----- this type mismatch is reported here

Note:
  expected type: Int
  found type: String
  the conflicting types meet at this expression

Help:
  These two types are not compatible.
== stdout ==
<not executed>
